--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,10 @@
+commonmark==0.9.1
 et-xmlfile==1.1.0
 numpy==1.22.3
 openpyxl==3.0.9
+Pygments==2.12.0
 python-dateutil==2.8.2
 pytz==2022.1
+rich==12.4.4
 six==1.16.0
+typing_extensions==4.2.0
